--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "astro": "^4.0.7",
-    "astro-icon": "^0.8.2",
     "sharp-ico": "^0.1.5"
+  },
+  "devDependencies": {
+    "astro-icon": "^0.8.2"
   }
 }
